--- a/shared/assets/components/modern-navbar.html
+++ b/shared/assets/components/modern-navbar.html
@@ -15,7 +15,7 @@
                 <!-- <span class="nav-icon">🏠</span> -->
                 <span>Home</span>
             </a></li>
-            <li><a href="/About" class="nav-link" data-page="about">
+            <li><a href="/about" class="nav-link" data-page="about">
                 <!-- <span class="nav-icon">👤</span> -->
                 <span>About</span>
             </a></li>
@@ -66,7 +66,7 @@
                     </a>
                 </li>
                 <li class="sidebar-nav-item">
-                    <a href="/About" class="sidebar-nav-link" data-page="about">
+                    <a href="/about" class="sidebar-nav-link" data-page="about">
                         <!-- <span class="nav-icon">👤</span> -->
                         <span>About Me</span>
                     </a>
@@ -169,7 +169,7 @@
             </a>
         </li>
         <li class="mobile-nav-item">
-            <a href="/About" class="mobile-nav-link" data-page="about">
+            <a href="/about" class="mobile-nav-link" data-page="about">
                 <!-- <span class="nav-icon">👤</span> -->
                 <span>About Me</span>
             </a>
