References updated to valid links. Images changed.

--- a/shared/assets/components/modern-navbar.html
+++ b/shared/assets/components/modern-navbar.html
@@ -23,7 +23,7 @@
                 <!-- <span class="nav-icon">💼</span> -->
                 <span>Projects</span>
             </a></li>
-            <li><a href="/linktree.html" class="nav-link" data-page="linktree">
+            <li><a href="/linktree" class="nav-link" data-page="linktree">
                 <!-- <span class="nav-icon">🔗</span> -->
                 <span>Links</span>
             </a></li>
@@ -91,7 +91,7 @@
             <h3 class="menu-section-title">Connect</h3>
             <ul class="sidebar-nav-menu">
                 <li class="sidebar-nav-item">
-                    <a href="/linktree.html" class="sidebar-nav-link" data-page="linktree">
+                    <a href="/linktree" class="sidebar-nav-link" data-page="linktree">
                         <!-- <span class="nav-icon">🔗</span> -->
                         <span>All Links</span>
                     </a>
@@ -187,7 +187,7 @@
             </a>
         </li>
         <li class="mobile-nav-item">
-            <a href="/linktree.html" class="mobile-nav-link" data-page="linktree">
+            <a href="/linktree" class="mobile-nav-link" data-page="linktree">
                 <!-- <span class="nav-icon">🔗</span> -->
                 <span>All Links</span>
             </a>
